kup-card: box layout 3, fixed inline wrap.

--- a/packages/ketchup/src/components/kup-card/box/kup-card-box-3.scss
+++ b/packages/ketchup/src/components/kup-card/box/kup-card-box-3.scss
@@ -18,11 +18,16 @@
     overflow: hidden;
     padding: 0.5em;
     text-overflow: ellipsis;
+    white-space: nowrap;
     width: 50%;
   }
 
   .value {
     padding: 0.5em;
     font-weight: bold;
+  }
+
+  .f-cell .f-cell__text {
+    white-space: nowrap;
   }
 }
